# gmdscea

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: spack-ubuntu.yml
GMDSCEA/: CMakeLists.txt  gmdsceaConfig.cmake.in
GMDSCEA/inc/GMDSCEA/: GMDSCEAWriter.h  LimaReader.h  LimaReader_def.h  LimaWriter.h  LimaWriterAPI.h  LimaWriter_def.h
GMDSCEA/src/: GMDSCEAWriter.cpp  IGMeshWriterImplCEA.cpp  LimaWriterAPI.cpp
GMDSCEA/test/: LimaAPITest.h  LimaTest.h  main.cpp
test_link/: CMakeLists.txt  main.cpp
